feat: completed security system